# KetchApp-Auth-Api

./: .env  .gitignore  Cargo.toml  Dockerfile  build.bat  build.sh  config.toml  docker-compose.yml  entrypoint.sh  private_key.pem
RustBigApi/: .gitignore  Cargo.toml  config.toml
RustBigApi/crates/api/authentication/: Cargo.toml  config.toml
RustBigApi/crates/api/authentication/src/: lib.rs  main.rs
RustBigApi/crates/api/authentication/src/config/: openapi.rs
RustBigApi/crates/api/authentication/src/handlers/: login.rs  mod.rs  register.rs
RustBigApi/crates/api/authentication/src/models/: claims.rs  login.rs  mod.rs  register.rs
RustBigApi/crates/api/authentication/tests/: register_api.rs
RustBigApi/crates/api/private/: Cargo.toml  config.toml
RustBigApi/crates/api/private/src/: lib.rs  main.rs
RustBigApi/crates/api/private/src/config/: openapi.rs
RustBigApi/crates/api/private/src/handlers/: mod.rs  users.rs
RustBigApi/crates/common/: Cargo.toml
RustBigApi/crates/common/migrations/2025-07-03-000903_create_users/: up.sql
RustBigApi/crates/common/migrations/2025-07-03-082756_create_groups/: up.sql
RustBigApi/crates/common/migrations/2025-07-03-082810_create_user_groups/: down.sql  up.sql
RustBigApi/crates/common/migrations/2025-07-03-091810_create_permissions/: down.sql  up.sql
RustBigApi/crates/common/migrations/2025-07-03-092152_create_group_permissions/: down.sql  up.sql
RustBigApi/crates/common/src/: errors.rs  lib.rs  schema.rs
RustBigApi/crates/common/src/config/: app_config.rs
RustBigApi/crates/common/src/middlewares/: auth_middleware.rs
RustBigApi/crates/common/src/models/: claims.rs  user.rs
RustBigApi/crates/common/src/repositories/: groups_repo.rs  mod.rs  permissions_repo.rs  users_repo.rs
RustBigApi/crates/common/src/utils/: extract_jwt_claims.rs  mod.rs  permission_macro.rs
RustBigApi/crates/permission_macro/: Cargo.toml
RustBigApi/crates/permission_macro/src/: lib.rs
authentication/: Dockerfile  config.toml  docker-compose.yml  entrypoint.sh  public_key.pem
authentication/migrations/2025-07-17-005335_create_users/: up.sql
authentication/src/: lib.rs  main.rs
authentication/src/config/: app_config.rs  mod.rs  open_api.rs
authentication/src/handlers/: login.rs  mod.rs  register.rs
authentication/src/models/: claims.rs  register.rs
authentication/tests/: user_register_and_login.rs
src/: errors.rs  main.rs  schema.rs
src/handlers/: login.rs  register.rs
src/models/: auth_response_model.rs  login.rs  mod.rs  register.rs
src/repositories/: mod.rs  users_repo.rs
tests/: user_register_and_login.rs
website/: Cargo.toml  index.html  rust-toolchain.toml
website/public/: style.scss
website/src/: app.rs  main.rs  router.rs
website/src/pages/: mod.rs
website/src/pages/admin/table/: mod.rs  table_view.rs
website/src/pages/auth/: auth_view.rs  mod.rs
website/src/pages/home/: home_view.rs  mod.rs
website/src/pages/login/: login_view.rs  mod.rs
website/src/pages/not_found/: mod.rs  not_found_view.rs
website/src/pages/profile/: mod.rs  profile_view.rs
website/src/pages/register/: mod.rs  register_view.rs
website/src/pages/table/: table_view.rs
website/src/services/: auth_service.rs
website/src/state/: mod.rs  theme.rs  user.rs
website/src/utils/: api.rs  cookies.rs  mod.rs  notification.rs  show_modal.rs
