[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
# Environment configuration
dotenvy = "0.15.7"

# We
actix-web = "4.11.0"
actix-cors = "0.7.1"
thiserror = "2.0.12"
validator = { version = "0.20.0", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.11"
tracing = "0.1.41"
utoipa-swagger-ui = { version = "8.0.0", features = ["actix-web"] }
utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
diesel = { version = "2.2.10", features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono",
] }
r2d2 = "0.8.10"
chrono = { version = "0.4.41", features = ["serde"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
rand = { version = "0.8", features = ["std", "getrandom"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }