[workspace]
members = [
    "crates/api/authentication",
    "crates/api/private",
    "crates/common"
]

[package]
name = "rust_big_api"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
dotenvy = "0.15.7"
actix-web = "4.11.0"
actix-cors = "0.7.1"
anyhow = "1.0.98"
thiserror = "2.0.12"
validator = { version = "0.20.0", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.11"
tracing = "0.1.41"
utoipa-swagger-ui = { version = "8.0.0", features = ["actix-web"] }
utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "uuid", "chrono"] }
r2d2 = "0.8.10"
tokio = { version = "1.45.1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
once_cell = "1.21.3"
regex = "1.11.1"
lazy_static = "1.5.0"
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
dhat = "0.3"

[lib]
path = "src/lib.rs"
name = "rust_big_api"
