[package]
name = "website"
version = "0.1.0"
edition = "2021"
authors = ["alexb"]

[toolchain]
channel = "1.74.0"
targets = ["wasm32-unknown-unknown"]

[dependencies]
leptos = { version = "0.8.2", features = ["csr"] }
leptos_meta = "0.8.2"
leptos_router = "0.8.2"
leptos-use = { version = "0.16.2", features = ["use_cookie"] }
leptos-struct-table = "0.15.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
wasm-bindgen-futures = "0.4.50"
reqwest = "0.12.22"
derive_more = { version = "2.0.1", features = ["full"] }
better_default = "1.0.5"
web-sys = "0.3.77"
wasm-bindgen = "0.2.100"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
