[package]
name = "common"
version = "0.1.0"
edition = "2021"


[dependencies]
# Utils
dotenvy = { workspace = true }

# Framework
actix-web = { workspace = true }
actix-cors = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }

# Serialization
serde = { workspace = true }

# Configuration
config = { workspace = true }

# Logging
tracing = { workspace = true }

# OpenAPI Documentation
utoipa-swagger-ui = { workspace = true }
utoipa = { workspace = true }

# Database
diesel = { workspace = true }
r2d2 = { workspace = true }

# Async runtime
tokio = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
serde_json = { workspace = true }

# Security
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
dhat = { workspace = true}